add mock and README
