# pkg/repos/handler.go
@@ -19,7 +19,11 @@ func NewHandler(l *logrus.Entry, s Service) *handler {
 
 func (h *handler) AddRoutes(r *mux.Router) {
 	r.HandleFunc("/repos/add", h.addRepos).Methods(http.MethodPost)
+	r.HandleFunc("/repos/get", h.getRepos).Methods(http.MethodPost)
+	r.HandleFunc("/repos/update", h.updateRepos).Methods(http.MethodPost)
+	r.HandleFunc("/repos/delete", h.deleteRepos).Methods(http.MethodPost)
 	r.HandleFunc("/repos/scan", h.scanRepos).Methods(http.MethodPost)
+	r.HandleFunc("/repos/scan_results", h.scanResult).Methods(http.MethodPost)
 }
 
 func (h *handler) addRepos(w http.ResponseWriter, r *http.Request) {
@@ -49,5 +53,65 @@ func (h *handler) scanRepos(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	response, err = h.s.StartScanRepos(r.Context(), request)
+	net.WriteJSON(w, response, err)
+}
+
+func (h *handler) updateRepos(w http.ResponseWriter, r *http.Request) {
+	var (
+		request  = &ReqUpdateRepos{}
+		response = &RespUpdateRepos{}
+		err      error
+	)
+
+	if err = net.Bind(r, request); err != nil {
+		net.WriteJSON(w, nil, err)
+		return
+	}
+	response, err = h.s.UpdateRepos(r.Context(), request)
+	net.WriteJSON(w, response, err)
+}
+
+func (h *handler) deleteRepos(w http.ResponseWriter, r *http.Request) {
+	var (
+		request  = &ReqDeleteRepos{}
+		response = &RespDeleteRepos{}
+		err      error
+	)
+
+	if err = net.Bind(r, request); err != nil {
+		net.WriteJSON(w, nil, err)
+		return
+	}
+	response, err = h.s.DeleteRepos(r.Context(), request)
+	net.WriteJSON(w, response, err)
+}
+
+func (h *handler) getRepos(w http.ResponseWriter, r *http.Request) {
+	var (
+		request  = &ReqGetRepos{}
+		response = &RespGetRepos{}
+		err      error
+	)
+
+	if err = net.Bind(r, request); err != nil {
+		net.WriteJSON(w, nil, err)
+		return
+	}
+	response, err = h.s.GetRepos(r.Context(), request)
+	net.WriteJSON(w, response, err)
+}
+
+func (h *handler) scanResult(w http.ResponseWriter, r *http.Request) {
+	var (
+		request  = &ReqGetResult{}
+		response = &RespGetResult{}
+		err      error
+	)
+
+	if err = net.Bind(r, request); err != nil {
+		net.WriteJSON(w, nil, err)
+		return
+	}
+	response, err = h.s.GetResult(r.Context(), request)
 	net.WriteJSON(w, response, err)
 }
